salesforce-litle-MP/src/objects/Litle_Risk_Indicator__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Litle_Verification_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Litle Verification Result</label>
        <referenceTo>Litle_Verification_Result__c</referenceTo>
        <relationshipLabel>Litle Risk Indicators</relationshipLabel>
        <relationshipName>Litle_Risk_Indicators</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Litle Risk Indicator</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Litle Risk Indicator Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Litle Risk Indicators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>